--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,5 +24,6 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm test
+      - name: Run test script
+        run: node runtest.js
+
