--- a/.github/workflows/JaegerSetup.yml
+++ b/.github/workflows/JaegerSetup.yml
@@ -1,10 +1,7 @@
-name: Run with Jaeger
+name: Run with Jaeger (host network)
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
 
 jobs:
   run-jaeger:
@@ -14,21 +11,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Start Jaeger
+      - name: Start Jaeger (host network)
         run: |
           docker run -d --name jaeger \
+            --network host \
             -e COLLECTOR_ZIPKIN_HTTP_PORT=9411 \
-            -p 5775:5775/udp \
-            -p 6831:6831/udp \
-            -p 6832:6832/udp \
-            -p 5778:5778 \
-            -p 16686:16686 \
-            -p 14268:14268 \
-            -p 14250:14250 \
-            -p 9411:9411 \
             jaegertracing/all-in-one:latest
-          
-          echo "Jaeger started at http://localhost:16686"
+
+          echo "Jaeger started on host network — UI at http://localhost:16686"
 
       - name: Wait for Jaeger to be ready
         run: |
@@ -38,7 +28,7 @@ jobs:
       - name: Run tests (example)
         run: |
           echo "Running tests while Jaeger is active..."
-          # ovdje bi išli tvoji testovi, npr. mvn test ili pytest
+          # npr. mvn test ili pytest
 
       - name: Stop and remove Jaeger
         if: always()
