--- a/.github/workflows/JaegerSetup.yml
+++ b/.github/workflows/JaegerSetup.yml
@@ -2,6 +2,9 @@ name: Run with Jaeger (host network)
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   run-jaeger:
@@ -16,14 +19,22 @@ jobs:
           docker run -d --name jaeger \
             --network host \
             -e COLLECTOR_ZIPKIN_HTTP_PORT=9411 \
-            jaegertracing/all-in-one:latest
+            cr.jaegertracing.io/jaegertracing/all-in-one:1.74.0
 
           echo "Jaeger started on host network — UI at http://localhost:16686"
 
       - name: Wait for Jaeger to be ready
         run: |
           echo "Waiting for Jaeger to start..."
-          sleep 10
+          for i in {1..10}; do
+            if curl -s http://localhost:16686 > /dev/null; then
+              echo "Jaeger is ready!"
+              exit 0
+            fi
+            echo "Still waiting..."
+            sleep 3
+          done
+          echo "Jaeger did not start in time" && exit 1
 
       - name: Run tests (example)
         run: |
